GNU C Library NEWS -- history of user-visible changes.
Copyright (C) 1992-2024 Free Software Foundation, Inc.
See the end for copying conditions.

Please send GNU C library bug reports via <https://sourceware.org/bugzilla/>
using `glibc' in the "product" field.

Version 2.40.1

The following bugs are resolved with this release:

  [27821] ungetc: Fix backup buffer leak on program exit
  [30081] resolv: Do not wait for non-existing second DNS response after error
  [31394] clone on sparc might fail with -EFAULT for no valid reason
  [31717] elf: Avoid re-initializing already allocated TLS in dlopen
  [31890] resolv: Allow short error responses to match any DNS query
  [31943] _dl_find_object can fail if ld.so contains gaps between load segments
  [31968] mremap implementation in C does not handle arguments correctly
  [32026] strerror/strsignal TLS not handled correctly for secondary namespaces
  [32052] Name space violation in fortify wrappers
  [32137] libio: Attempt wide backup free only for non-legacy code
  [32214] Fix missing randomness in __gen_tempname
  [32231] elf: Change ldconfig auxcache magic number
  [32245] glibc -Wstringop-overflow= build failure on hppa
  [32470] x86: Avoid integer truncation with large cache sizes
  [32810] Crash on x86-64 if XSAVEC disable via tunable
  [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
  [33185] Fix double-free after allocation failure in regcomp

Version 2.40

Major new features:

* The <stdbit.h> header type-generic macros have been changed when using
  GCC 14.1 or later to use __builtin_stdc_bit_ceil etc. built-in functions
  in order to support unsigned __int128 and/or unsigned _BitInt(N) operands
  with arbitrary precisions when supported by the target.

* The GNU C Library now supports a feature test macro _ISOC23_SOURCE to
  enable features from the ISO C23 standard.  Only some features from
  this standard are supported by the GNU C Library.  The older name