@@ -9,6 +9,7 @@ Version 2.40.1
 
 The following bugs are resolved with this release:
 
+  [19341] ctype: Fallback initialization of TLS using relocations
   [27821] ungetc: Fix backup buffer leak on program exit
   [30081] resolv: Do not wait for non-existing second DNS response after error
   [31394] clone on sparc might fail with -EFAULT for no valid reason
@@ -23,6 +24,7 @@ The following bugs are resolved with this release:
   [32231] elf: Change ldconfig auxcache magic number
   [32245] glibc -Wstringop-overflow= build failure on hppa
   [32470] x86: Avoid integer truncation with large cache sizes
+  [32483] ctype macros segfault in multithreaded programs with multiple libc.so
   [32810] Crash on x86-64 if XSAVEC disable via tunable
   [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
   [33185] Fix double-free after allocation failure in regcomp
